--- a/Services/Order/pom.xml
+++ b/Services/Order/pom.xml
@@ -38,6 +38,12 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.26</version> <!-- Or the version you are using -->
+</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
