--- a/Services/Order/src/main/resources/application.properties
+++ b/Services/Order/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/ecomm
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=Gameofthrones@01
 
 
 # JPA/Hibernate properties
